--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,23 @@
-.idea/
-.vscode/
-node_modules/
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+node_modules
+
+# testing
+coverage
+
+# production
 build
+build0
+
+# misc
 .DS_Store
-*.tgz
-my-app*
-template/src/__tests__/__snapshots__/
-lerna-debug.log
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/.changelog
-.npm/
+package-lock.json
