add forgotpassword, register, myaccount page

--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "antd": "^4.16.9",
+    "antd-country-phone-input": "^4.3.1",
     "aos": "^2.3.4",
     "axios": "^0.20.0",
     "bootstrap": "^5.0.2",
     "connected-react-router": "4.5.0",
     "date-fns": "^2.23.0",
+    "i18next": "^21.6.12",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "pure-react-carousel": "^1.27.6",
@@ -30,17 +32,19 @@
     "react-bootstrap": "^2.0.0-beta.4",
     "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "16.13.1",
+    "react-i18next": "^11.15.5",
     "react-phone-input-2": "^2.14.0",
     "react-redux": "^5.1.2",
     "react-responsive-carousel": "^3.2.20",
-    "react-router": "4.4.0-beta.8",
-    "react-router-dom": "4.4.0-beta.8",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
     "react-stepper-horizontal": "^1.0.11",
     "react-typist": "^2.0.5",
     "redux": "4.0.5",
     "redux-thunk": "^2.3.0",
     "serve": "10.1.2",
-    "use-places-autocomplete": "^1.11.0"
+    "use-places-autocomplete": "^1.11.0",
+    "world_countries_lists": "^2.4.0"
   },
   "browserslist": [
     ">0.2%",
