--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "pure-react-carousel": "^1.27.6",
+    "query-string": "^7.1.1",
     "react": "16.13.1",
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^2.0.0-beta.4",
